
// Interface para o Aparelho Telefônico
public interface AparelhoTelefonico {

    // Método para ligar o telefone
    void ligar();

    // Método para atender uma chamada
    void atender();

    // Método para iniciar o correio de voz
    void iniciarCorreioVoz();
}
