// Interface para o Navegador de Internet
public interface NavegadorInternet {

    // Método para exibir uma página da web
    void exibirPagina();

    // Método para adicionar uma nova aba de navegação
    void adicionarNovaAba();

    // Método para atualizar a página atual
    void atualizarPagina();
}
