
// Interface para o Reprodutor Musical
public interface ReprodutorMusical {

    // Método para tocar música
    void tocar();

    // Método para pausar a reprodução
    void pausar();

    // Método para selecionar uma música
    void selecionarMusica();
}
